--- a/styles.css
+++ b/styles.css
@@ -1,137 +1,357 @@
-html,
-body {
-  min-width: 290px;
-  color: #4d4e53;
-  background-color: #ffffff;
-  font-family: 'Open Sans', Arial, sans-serif;
-  line-height: 1.5;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 
-header {
-    color: black;
-    margin: 10px;
-    text-align: center;
-    font-size: 1.8em;
-    font-weight: thin;
-    background-color: rgb(255, 213, 0);
-  }
 
-  #main-doc header {
-    text-align: left;
-    margin: 0px;
-    background-color: rgb(238, 255, 0);
-  }
+body{    
+  background-image: url('images/output-onlinepngtools.png');
+  background-size: cover;
+  background-attachment:fixed ;
+}
 
-  #main-doc {
-    position: absolute;
-    margin-left: 310px;
-    padding: 20px;
-    margin-bottom: 110px;
-  }
 
-  code {
-    display: block;
-    text-align: left;
-    white-space: pre-line;
-    position: relative;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 2;
-    background-color: #f7f7f7;
-    padding: 15px;
-    margin: 10px;
-    border-radius: 5px;
-  }
 
-  section article {
-    color: #4d4e53;
-    margin: 15px;
-    font-size: 0.96em;
-  }
 
-  section li {
-    margin: 15px 0px 0px 20px;
-  }
+#page-wrapper{
+  width:100%;
+}
 
-  #ifl { 
-     color: black;
+#header{
+  width:100%;
+  position: fixed;
+  top:0;
+  left:0;
+}
+
+
+
+#header, .ul-nav{
+  display:flex;
+  align-items: center;
+  background-color: rgb(205, 50, 164);
+}
+
+.h-link, .nav-link{
+  list-style:none;
+  text-decoration: none;
+  margin-left: 1em;
+  font-size: 1.1em;
+  color:white;
+  cursor: pointer;
+}
+
+#nav-bar{
+  display: flex;
+
+  width:95%;
+  justify-content: flex-end;
+  padding-right: 3em;
+  position: relative;
+ color:white;
+
+}
+
+#header-img{
+  height: 4em;
+}
+
+
+@media screen and (max-width:591px){
+   li, a{
+      font-size: 1.1em;
+  }
+}
+
+@media screen and (max-width:591px){
+  li, a{
+     font-size: 1.05em;
+ }
+}
+
+@media screen and (max-width:500px){
+  li, a{
+     display:grid;
+     height: 100%;
+ }
+}
+
+@media screen and (max-width:449px){
+  li, a{
      font-size: 1em;
+ }
+}
+
+@media screen and (max-width:474px){
+  ul{
+     height: 5em;
+     display: flex;
+     flex-direction: column;
+  }
+}
+
+
+#hero{
+  display: flex;
+  margin-top:2.8em;
+  align-items: center;
+  font-size: 2em;
+  flex-direction: column;
+}
+
+#email{
+  width: 24em;
+  height:2.8em;
+  border-radius:0.01em;
+}
+
+#submit{
+  display: block;
+  margin: 0.9em auto 0 auto;
+  height:2.7em;
+  width: 8em;
+  border-radius: 4em;
+  background-color: brown;
+  color: white;
+  font-weight: bolder;
+  border-color: white;
+}
+
+#line-break{
+  display: inline;
+}
+
+@media screen and (max-width:612px){
+  #hero{
+    font-size: 1.7em;
   }
 
-  #navbar {
-    position: fixed;
-    min-width: 290px;
-    top: 0px;
-    left: 0px;
-    width: 300px;
-    height: 100%;
-    border-right: solid;
-    border-color: rgba(0, 22, 22, 0.4);
+  #email{
+    width: 22em;
+    height:2.6em;
+    border-radius:0.01em;
   }
+}
 
-  #navbar ul {
-    height: 88%;
-    padding: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-  }
-
-  #navbar li {
-    color: #4d4e53;
-    border-top: 1px solid;
-    list-style: none;
-    position: relative;
-    width: 100%;
-  }
-
-  #navbar a {
+@media screen and (max-width:520px){
+  #line-break{
     display: block;
-    padding: 10px 30px;
-    color: #4d4e53;
-    text-decoration: none;
-    cursor: pointer;
+    margin-left: 3em;
   }
 
-  @media only screen and (max-width: 815px) {
-    /* For mobile phones: */
-    #navbar ul {
-      border: 1px solid;
-      height: 207px;
-    }
-  
-    #navbar {
-      background-color: white;
-      position: absolute;
-      top: 0;
-      padding: 0;
-      margin: 0;
-      width: 100%;
-      max-height: 275px;
-      border: none;
-      z-index: 1;
-      border-bottom: 2px solid;
-    }
-  
-    #main-doc {
-      position: relative;
-      margin-left: 0px;
-      margin-top: 270px;
-    }
+  #hero{
+    margin-top:3em;
+  }
+}
+
+@media screen and (max-width:403px){
+  #hero{
+    font-size: 1.4em;
+    margin-top:4em;
   }
 
-  @media only screen and (max-width: 320px) {
-    #main-doc {
-      margin-left: -10px;
-    }
-  
-    code {
-      margin-left: -20px;
-      width: 100%;
-      padding: 15px;
-      padding-left: 10px;
-      padding-right: 45px;
-      min-width: 233px;
-    }
+  #email{
+    width: 20em;
+    height:2.3em;
+    border-radius:0.01em;
   }
-  
+}
+
+@media screen and (max-width:325px){
+  #hero{
+    font-size: 1.1em;
+    margin-top: 5em;
+   
+  }
+
+  #email{
+    margin-top: 1em;
+  }
+
+}
+
+#features{
+  width:60%;
+  min-width: 60%;
+  display: block;
+  margin: 0 auto 0 auto;
+  height: 27rem;
+}
+
+.feature1, .feature2, .feature3{
+ display: block;
+ margin: 4em auto 0 auto;
+}
+
+#para{
+  font-size: 1.1em;
+}
+
+#heading{
+  color:black
+}
+
+.head{
+  color: rgb(179, 27, 27);
+}
+
+#how-it-looks{
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width:1164px){
+  #how-it-looks{
+    margin-top: 4em;
+}
+}
+
+@media screen and (max-width:843px){
+  #how-it-looks{
+    margin-top: 5em;
+}
+}
+
+@media screen and (max-width:756px){
+  #how-it-looks{
+    margin-top: 6em;
+}
+}
+
+@media screen and (max-width:705px){
+  #how-it-looks{
+    margin-top: 7em;
+}
+}
+
+@media screen and (max-width:675px){
+  #how-it-looks{
+    margin-top: 9em;
+}
+
+}
+
+@media screen and (max-width:646px){
+  #how-it-looks{
+    margin-top: 11em;
+}
+}
+
+@media screen and (max-width:568px){
+  #how-it-looks{
+    margin-top: 15em;
+}
+}
+
+@media screen and (max-width:480px){
+  #how-it-looks{
+    margin-top: 20em;
+}
+}
+
+@media screen and (max-width:405px){
+  #how-it-looks{
+    margin-top: 23em;
+}
+}
+
+@media screen and (max-width:384px){
+  #how-it-looks{
+    margin-top: 26em;
+}
+}
+
+@media screen and (max-width:353px){
+  #how-it-looks{
+    margin-top: 28em;
+}
+}
+
+@media screen and (max-width:346px){
+  #how-it-looks{
+    margin-top: 30em;
+}
+}
+
+@media screen and (max-width:324px){
+  #how-it-looks{
+    margin-top: 31em;
+}
+}
+
+#pricing{
+  background-color: rgb(239, 157, 157);
+  width:100%;
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 3em;
+}
+
+.image{
+  margin: 1em 1em 1em 1em;
+}
+
+.c-imgs{
+  object-fit: contain;
+  min-width:40%;
+}
+
+.name, .price{
+  display: flex;
+  justify-content: center;
+}
+
+.name{
+  font-size: 2em;
+  font-weight: bolder;
+}
+
+.price{
+  font-size: 1.5em;
+  margin-bottom: 2em;
+}
+
+@media screen and (max-width:448px){
+  .c-imgs{
+    width:99%;
+  }
+}
+
+footer{
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  background-color: rgb(205, 50, 164);
+  bottom: 0;
+}
+
+.f-l, .f-a{
+  list-style:none;
+  text-decoration: none;
+  margin-left: 1em;
+  font-size: 1.0em;
+  color:white;
+  cursor: pointer;
+  background-color: rgb(205, 50, 164);
+}
+
+.f-ul{
+  display: flex;
+  align-items: center;
+  margin-right:2em;
+  margin-bottom: 0.5em;
+}
+
+#cop{
+  margin-right:2em;
+  font-size: 1em;
+  color: white;
+}
+
+
+
+
