--- a/styles.css
+++ b/styles.css
@@ -137,8 +137,8 @@ body{
 
 @media screen and (max-width:520px){
   #line-break{
-    display: block;
-    margin-left: 3em;
+    display: flex;
+    justify-content: center;
   }
 
   #hero{
