--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,7 @@ body{
 
 @media screen and (max-width:1164px){
   #how-it-looks{
-    margin-top: 4em;
+    margin-top: 6em;
 }
 }
 
@@ -217,70 +217,88 @@ body{
 }
 }
 
-@media screen and (max-width:756px){
+@media screen and (max-width:780px){
   #how-it-looks{
-    margin-top: 6em;
+    margin-top: 8em;
 }
 }
 
-@media screen and (max-width:705px){
+@media screen and (max-width:740px){
   #how-it-looks{
-    margin-top: 7em;
+    margin-top: 10em;
 }
 }
 
-@media screen and (max-width:675px){
+@media screen and (max-width:720px){
   #how-it-looks{
-    margin-top: 9em;
+    margin-top: 12em;
+}
 }
 
-}
-
-@media screen and (max-width:646px){
+@media screen and (max-width:700px){
   #how-it-looks{
-    margin-top: 11em;
-}
+    margin-top: 13em;
 }
 
-@media screen and (max-width:568px){
+}
+
+@media screen and (max-width:680px){
   #how-it-looks{
     margin-top: 15em;
 }
 }
 
-@media screen and (max-width:480px){
+@media screen and (max-width:568px){
+  #how-it-looks{
+    margin-top: 18em;
+}
+}
+
+@media screen and (max-width:530px){
   #how-it-looks{
     margin-top: 20em;
 }
 }
 
-@media screen and (max-width:405px){
+@media screen and (max-width:490px){
   #how-it-looks{
     margin-top: 23em;
 }
 }
 
-@media screen and (max-width:384px){
+@media screen and (max-width:470px){
   #how-it-looks{
     margin-top: 26em;
 }
 }
 
-@media screen and (max-width:353px){
+@media screen and (max-width:430px){
   #how-it-looks{
     margin-top: 28em;
 }
 }
 
-@media screen and (max-width:346px){
+@media screen and (max-width:385px){
   #how-it-looks{
     margin-top: 30em;
 }
 }
 
-@media screen and (max-width:324px){
+@media screen and (max-width:360px){
   #how-it-looks{
-    margin-top: 31em;
+    margin-top: 32em;
+}
+}
+
+@media screen and (max-width:350px){
+  #how-it-looks{
+    margin-top: 34em;
+}
+}
+
+@media screen and (max-width:328px){
+  #how-it-looks{
+    margin-top: 36em;
 }
 }
 
