--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ body{
   display: inline;
 }
 
-@media screen and (max-width:612px){
+@media screen and (max-width:667px){
   #hero{
     font-size: 1.7em;
   }
@@ -135,7 +135,7 @@ body{
   }
 }
 
-@media screen and (max-width:550px){
+@media screen and (max-width:602px){
   #line-break{
     display: flex;
     justify-content: center;
@@ -146,9 +146,9 @@ body{
   }
 }
 
-@media screen and (max-width:450px){
+@media screen and (max-width:514px){
   #hero{
-    font-size: 1.4em;
+    font-size: 1.3em;
     margin-top:4em;
   }
 
@@ -159,7 +159,20 @@ body{
   }
 }
 
-@media screen and (max-width:340px){
+@media screen and (max-width:405px){
+  #hero{
+    font-size: 1.3em;
+    margin-top:4em;
+  }
+
+  #email{
+    width: 18em;
+    height:2.3em;
+    border-radius:0.01em;
+  }
+}
+
+@media screen and (max-width:383px){
   #hero{
     font-size: 1.1em;
     margin-top: 5em;
@@ -167,7 +180,27 @@ body{
   }
 
   #email{
+    width: 17em;
     margin-top: 1em;
+  }
+
+}
+
+@media screen and (max-width:337px){
+  #hero{
+    font-size: 1em;
+    margin-top: 6em;
+   
+  }
+
+  #email{
+    width: 16em;
+   
+  }
+
+  #submit{
+    width: 6em;
+    font-size: 0.8em;
   }
 
 }
